--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -6,7 +6,7 @@ footer p {
 
 footer {
   border-top: solid;
-  border-color: #2d5f5d;
+  border-color: #494b68;
   border-width: 6px;
   position: fixed;
   left: 0;
