added to API to search for user query, added different styles to navbar and footer, added to Search.jsx initial html returned, state, useEffect, and handleSubmit functions

--- a/client/src/styles/NavLinks.css
+++ b/client/src/styles/NavLinks.css
@@ -1,10 +1,12 @@
 /* navbar background colors */
 .nav-search {
-  background-color: #2d5f5d;
+  background-color: #86b3d1;
+  opacity: .9;
 }
 
 .nav-saved {
-  background-color: #494b68;
+  background-color: #844d36;
+  opacity: .8;
 }
 
 /* navbar brand, submit button, and contact info font color */
