code cleanup, added comments to each file

--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -1,4 +1,4 @@
-/* footer, footer paragraph, and general inquiries container */
+/* footer, footer paragraph, and footer border styles */
 footer,
 footer p {
   background-color: #022140;
