--- a/client/src/styles/NavLinks.css
+++ b/client/src/styles/NavLinks.css
@@ -9,7 +9,7 @@
   opacity: 0.8;
 }
 
-/* navbar brand, submit button, and contact info font color */
+/* navbar brand text color*/
 .navbar-brand {
   color: white;
 }
